[tool.poetry]
name = "fragpy"
version = "0.1.0"
description = "Fragrance web scraper"
authors = ["HTRUJILLO <htrujillo@lucta.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
